change: hide meeting id
